--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" /> <!-- Note that we can simply make use of "css/style.css" since the header folder is "public"-->
 </head>
 
 <body>
